--- a/src/Component/Footer/footer.css
+++ b/src/Component/Footer/footer.css
@@ -1,10 +1,63 @@
 .Footer {
     display: flex;
     justify-content: center;
+    align-items: center;
+    margin: auto;
     padding-top: 10vh;
 }
 
+.Footer div {
+    text-align: center;
+}
+
+.Footer div:nth-child(1) {
+    text-align: right;
+    line-height: 0.8rem;
+}
+
+.Footer div:nth-child(2) {
+    width: 18vw;
+    margin: 0 1vw 0 1vw;
+    text-align: center;
+}
+
+.Footer div:nth-child(3) {
+    text-align: left;
+    line-height: 0.2rem;
+}
+
 .Footer img {
-    height: 10vh;
-    max-height:348px;
+    max-width: 16vw;
+    max-height: 348px;
  }
+
+
+@media (min-device-width:1224px) {
+
+    .Footer {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        max-height: 348px;
+        margin: auto;
+        padding-top: 10vh;
+    }
+
+    .Footer div {
+        text-align: center;
+    }
+
+    .Footer div:nth-child(2) {
+        width: 10vw;
+        min-width: 100px;
+        margin: 0 1vw 0 1vw;
+        text-align: center;
+    }
+
+    .Footer img {
+        width: 6vw;
+        max-width: 348px;
+        min-width: 100px;
+    }
+
+}
