--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,7 @@ h1 {
 h2 {
   padding: 1vh 2vh 2vh 2vh;
   font-size: 1.3rem;
+  text-align: center;
 }
 
 h3 {
@@ -65,7 +66,6 @@ h4 {
           0 8px 4px rgba(0, 0, 0, 0.1),
           0 16px 8px rgba(0, 0, 0, 0.1);
   background: var(--main-style-color) url("./Assets/swish/plus.png") no-repeat left center/contain;
-  box-shadow: 0 2px 1px rgba(0,0,0,0.1), 0 4px 4px rgba(0,0,0,0.1), 0 8px 6px rgba(0,0,0,0.1);
 }
 
 .fullPage {
